# OpenglES_Everything

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
camera/: CMakeLists.txt  build.gradle
camera/src/androidTest/java/com/opensource/camera/: ExampleInstrumentedTest.java
camera/src/main/: AndroidManifest.xml
camera/src/main/cpp/: native-lib.cpp
camera/src/main/cpp/camera/: CameraSample.h  CameraShader.cpp  CameraShader.h
camera/src/main/cpp/es/: esUtil.cpp  esUtil.h
camera/src/main/cpp/glm/: CMakeLists.txt
camera/src/main/cpp/glm/detail/: func_matrix.hpp  func_noise.inl
camera/src/main/cpp/glm/gtc/: matrix_transform.hpp  quaternion.hpp  type_precision.hpp  type_ptr.hpp
camera/src/main/cpp/glm/gtx/: gradient_paint.hpp  intersect.hpp  io.hpp  matrix_query.hpp  norm.hpp  normalize_dot.hpp  perpendicular.hpp  quaternion.hpp  rotate_vector.hpp  simd_quat.hpp  spline.hpp  transform2.hpp  vector_angle.hpp
camera/src/main/cpp/utils/: GLUtils.h  matrix.cpp  matrix.h
camera/src/main/java/com/opensource/camera/: YUVPlayer.java
record/: CMakeLists.txt  build.gradle
record/src/androidTest/java/com/opensource/record/: ExampleInstrumentedTest.kt
record/src/main/: AndroidManifest.xml
record/src/main/cpp/: AudioRecorder.cpp  RecordBuffer.cpp  RecordBuffer.h
record/src/main/java/com/opensource/record/: RecordActivity.java
record/src/main/java/com/opensource/record/egl/: EglHelper.kt  (+1 more)
record/src/main/res/raw/: fragment_shader.glsl
record/src/main/res/values/: values.xml
record/src/test/java/com/opensource/record/: ExampleUnitTest.kt
(+128 files in other folders)
